--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       SQL_HOST: db
       SQL_PORT: 5432
       REDIS_HOST: "redis"
+      REDIS_PORT: 6379
       REDIS_PASSWORD: "test"
     depends_on:
       - db
