--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,16 @@ cffi==1.16.0
 channels==4.1.0
 channels-redis==4.2.0
 constantly==23.10.4
+crispy-bootstrap4==2024.1
 cryptography==42.0.7
 daphne==4.1.2
 Django==5.0.6
+django-allauth==0.62.1
+django-crispy-forms==2.1
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
+install==1.3.5
 msgpack==1.0.8
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
