--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,20 @@ services:
       REDIS_HOST: "redis"
       REDIS_PORT: 6379
       REDIS_PASSWORD: "test"
+      # EMAIL_BACKEND: 'django.core.mail.backends.smtp.EmailBackend'
+      # EMAIL_HOST: 'smtp.gmail.com'
+      # EMAIL_USE_TLS: True
+      # EMAIL_PORT: 587
+      # EMAIL_HOST_USER: #sender's email-id
+      # EMAIL_HOST_PASSWORD: #password associated with above email-id
     depends_on:
       - db
       - redis
 
   db:
     image: postgres:16
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
