--- a/requirements.txt
+++ b/requirements.txt
@@ -2,31 +2,44 @@ asgiref==3.8.1
 attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
+azure-common==1.1.28
+azure-communication-email==1.0.0b1
+azure-core==1.30.1
+azure-mgmt-core==1.4.0
+certifi==2024.2.2
 cffi==1.16.0
 channels==4.1.0
 channels-redis==4.2.0
+charset-normalizer==3.3.2
 constantly==23.10.4
 crispy-bootstrap4==2024.1
 cryptography==42.0.7
 daphne==4.1.2
 Django==5.0.6
+django-acs-email==0.0.4
 django-allauth==0.62.1
 django-crispy-forms==2.1
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
 install==1.3.5
+isodate==0.6.1
 msgpack==1.0.8
+msrest==0.7.1
+oauthlib==3.2.2
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
 pyOpenSSL==24.1.0
 redis==5.0.4
+requests==2.31.0
+requests-oauthlib==2.0.0
 service-identity==24.1.0
 six==1.16.0
 sqlparse==0.5.0
 Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.11.0
+urllib3==2.2.1
 zope.interface==6.3
