--- a/.gitignore
+++ b/.gitignore
@@ -131,10 +131,10 @@ GitHub.sublime-settings
 
 # Visual Studio Code # 
 .vscode/* 
-!.vscode/settings.json 
-!.vscode/tasks.json 
-!.vscode/launch.json 
-!.vscode/extensions.json 
+.vscode/settings.json 
+.vscode/tasks.json 
+.vscode/launch.json 
+.vscode/extensions.json 
 .history
 
 docker-compose-local.yml
