--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+astroid==3.2.1
 attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
@@ -6,38 +7,54 @@ azure-common==1.1.28
 azure-communication-email==1.0.0b1
 azure-core==1.30.1
 azure-mgmt-core==1.4.0
+black==24.4.2
 certifi==2024.2.2
 cffi==1.16.0
 channels==4.1.0
 channels-redis==4.2.0
 charset-normalizer==3.3.2
+click==8.1.7
 constantly==23.10.4
 crispy-bootstrap4==2024.1
 cryptography==42.0.7
 daphne==4.1.2
+dill==0.3.8
 Django==5.0.6
 django-acs-email==0.0.4
 django-allauth==0.62.1
 django-crispy-forms==2.1
+django-prometheus==2.3.1
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
+iniconfig==2.0.0
 install==1.3.5
 isodate==0.6.1
+isort==5.13.2
+mccabe==0.7.0
 msgpack==1.0.8
 msrest==0.7.1
+mypy-extensions==1.0.0
 oauthlib==3.2.2
+packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.2
+pluggy==1.5.0
+prometheus_client==0.20.0
 psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+pylint-plugin-utils==0.8.2
 pyOpenSSL==24.1.0
+pytest==8.2.0
 redis==5.0.4
 requests==2.31.0
 requests-oauthlib==2.0.0
 service-identity==24.1.0
 six==1.16.0
 sqlparse==0.5.0
+tomlkit==0.12.5
 Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.11.0
