--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django-acs-email==0.0.4
 django-allauth==0.62.1
 django-crispy-forms==2.1
 django-prometheus==2.3.1
+gunicorn==22.0.0
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
