--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ azure-communication-email==1.0.0b1
 azure-core==1.30.1
 azure-mgmt-core==1.4.0
 black==24.4.2
+boto3==1.34.108
+botocore==1.34.108
 certifi==2024.2.2
 cffi==1.16.0
 channels==4.1.0
@@ -24,6 +26,7 @@ django-acs-email==0.0.4
 django-allauth==0.62.1
 django-crispy-forms==2.1
 django-prometheus==2.3.1
+django-storages==1.14.3
 gunicorn==22.0.0
 hyperlink==21.0.0
 idna==3.7
@@ -32,6 +35,7 @@ iniconfig==2.0.0
 install==1.3.5
 isodate==0.6.1
 isort==5.13.2
+jmespath==1.0.1
 mccabe==0.7.0
 msgpack==1.0.8
 msrest==0.7.1
@@ -49,9 +53,11 @@ pycparser==2.22
 pylint-plugin-utils==0.8.2
 pyOpenSSL==24.1.0
 pytest==8.2.0
+python-dateutil==2.9.0.post0
 redis==5.0.4
 requests==2.31.0
 requests-oauthlib==2.0.0
+s3transfer==0.10.1
 service-identity==24.1.0
 six==1.16.0
 sqlparse==0.5.0
