--- a/django_chat.yml
+++ b/django_chat.yml
@@ -96,6 +96,26 @@ spec:
                 secretKeyRef:
                   name: django-chat-secrets
                   key: ACS_SENDER_EMAIL
+            - name: USE_S3
+              valueFrom:
+                secretKeyRef:
+                  name: django-chat-secrets
+                  key: USE_S3
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: django-chat-secrets
+                  key: AWS_ACCESS_KEY_ID
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: django-chat-secrets
+                  key: AWS_SECRET_ACCESS_KEY
+            - name: AWS_STORAGE_BUCKET_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: django-chat-secrets
+                  key: AWS_STORAGE_BUCKET_NAME
 ---
 # START Service
 apiVersion: v1
