--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ click==8.1.7
 constantly==23.10.4
 crispy-bootstrap4==2024.1
 cryptography==42.0.7
+daphne==4.1.2
 dill==0.3.8
 Django==5.0.6
 django-acs-email==0.0.4
