--- a/django_chat.yml
+++ b/django_chat.yml
@@ -26,7 +26,7 @@ spec:
           ports:
             - containerPort: 8000
           volumeMounts:
-            - mountPath: "/usr/src/app/logs"
+            - mountPath: "/home/app/web/logs"
               name: api-logs
           envFrom:
             - secretRef:
@@ -66,7 +66,7 @@ spec:
           ports:
             - containerPort: 8000
           volumeMounts:
-            - mountPath: "/usr/src/app/logs"
+            - mountPath: "/home/app/web/logs"
               name: ws-logs
           envFrom:
             - secretRef:
