--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ install==1.3.5
 isodate==0.6.1
 isort==5.13.2
 jmespath==1.0.1
+jwt==1.3.1
 mccabe==0.7.0
 msgpack==1.0.8
 msrest==0.7.1
@@ -54,6 +55,7 @@ psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+PyJWT==2.8.0
 pylint-plugin-utils==0.8.2
 pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
